feat:hox、react-howler

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
         }
       })();
     </script>
+    <script src="http://at.alicdn.com/t/font_2635727_9d1kcks389n.js"></script>
   </head>
   <body>
     <div id="root"></div>
