--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="minimum-scale=1, initial-scale=1, width=device-width"
+    />
     <title>Hello Electron React!</title>
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" /> -->
     <script>
       (() => {
         if (process?.env?.NODE_ENV !== 'development') {
@@ -14,7 +19,7 @@
         }
       })();
     </script>
-    <script src="http://at.alicdn.com/t/font_2635727_9d1kcks389n.js"></script>
+    <script src="https://at.alicdn.com/t/font_2635727_9d1kcks389n.js"></script>
   </head>
   <body>
     <div id="root"></div>
