feat:avatar rotate animation

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,11 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
-    <title>Hello Electron React!</title>
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" /> -->
+    <title>Hades</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
     <script>
       (() => {
         if (process?.env?.NODE_ENV !== 'development') {
